# xArmServoController-main

Python/: test_2.py  test_3.py
c_plus_plus/: CMakeLists.txt  example.cpp  servo.cpp  servo.hpp  util.cpp  xarm.cpp  xarm.hpp
